--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,13 +26,13 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    testCompile 'junit:junit:4.12'
     compile 'com.squareup.okhttp3:okhttp:3.9.0'
     compile 'com.android.support:design:26.+'
-    compile 'de.hdodenhof:circleimageview:2+'
+    compile 'de.hdodenhof:circleimageview:2.+'
     compile 'com.android.support:recyclerview-v7:26.+'
     compile 'com.android.support:cardview-v7:26.+'
-    compile 'com.github.bumptech.glide:glide:3+'
-    compile 'com.squareup.okhttp3:okhttp:3+'
-    compile 'org.litepal.android:core:1+'
+    compile 'com.github.bumptech.glide:glide:3.+'
+    compile 'org.litepal.android:core:1.+'
+    testCompile 'junit:junit:4.12'
+    compile 'com.github.arimorty:floatingsearchview:2.1.1'
 }
