--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,6 @@
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -23,7 +22,8 @@
         <activity android:name=".SearchActivity" />
         <activity android:name=".VisitedActivity" />
         <activity android:name=".ForbiddenActivity" />
-        <activity android:name=".DetailActicity"></activity>
+        <activity android:name=".DetailActicity"
+            android:label="Detail"/>
     </application>
 
 </manifest>
