--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,17 +14,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".FavoriteActivity" />
-        <activity android:name=".SearchActivity" />
-        <activity android:name=".VisitedActivity" />
-        <activity android:name=".ForbiddenActivity" />
-        <activity android:name=".DetailActicity"
+        <activity android:name=".activity.FavoriteActivity" />
+        <activity android:name=".activity.SearchActivity" />
+        <activity android:name=".activity.VisitedActivity" />
+        <activity android:name=".activity.ForbiddenActivity" />
+        <activity android:name=".activity.DetailActicity"
             android:label="Detail"/>
     </application>
 
