--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.github.arimorty:floatingsearchview:2.1.1'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1+'
+    compile 'in.srain.cube:cube-sdk:1.0.44@aar'
 }
