--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,6 @@
         android:name="org.litepal.LitePalApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -26,12 +25,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.FavoriteActivity" />
-        <activity android:name=".activity.SearchActivity" />
-        <activity android:name=".activity.VisitedActivity" />
+        <activity android:name=".activity.FavoriteActivity"
+            android:label="@string/activity_favorite_label"/>
+        <activity android:name=".activity.SearchActivity"
+            android:label="@string/activity_search_label"/>
+        <activity android:name=".activity.VisitedActivity"
+            android:label="@string/activity_visited_label"/>
         <activity android:name=".activity.ForbiddenActivity" />
-        <activity android:name=".activity.DetailActicity"
-            android:label="Detail"/>
+        <activity android:name=".activity.DetailActicity"/>
     </application>
 
 </manifest>
