--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     compile 'org.litepal.android:core:1.+'
     testCompile 'junit:junit:4.12'
     compile 'com.github.arimorty:floatingsearchview:2.1.1'
+    compile 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:+'
     repositories {
         maven {
             url 'https://oss.sonatype.org/content/repositories/snapshots'
