--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,5 @@ dependencies {
     }
     compile 'in.srain.cube:clog:1.0.2'
     compile 'in.srain.cube:cube-sdk:1.0.44.40-SNAPSHOT@aar'
+    compile 'com.sina.weibo.sdk:core:4.1.0:openDefaultRelease@aar'
 }
